tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Distilled-AAAAAAAAAAAAAAAAAAAI5g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2278,
  "prerequisites": [
    2164,
    2279
  ],
  "properties": {
    "auto_claim": false,
    "desc": "What's this? A step back you say! Yes, the Distilled bee doesn't make anything of use, but the potential is there. Breed them from Oily and Industrious.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Distilled",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2164,
    2279
  ],
  "rewards": [],
  "tasks": []
}
