tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Draconic-AAAAAAAAAAAAAAAAAAAIxg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2246,
  "prerequisites": [
    1121,
    2245
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Draconic bee is required in order to get the dusts needed to recreate the Dragon Egg using magic. It must be bred in the End. Breed them from Imperial and Abandoned.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Draconic",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1121,
    2245
  ],
  "rewards": [],
  "tasks": []
}
