tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Elastic-AAAAAAAAAAAAAAAAAAAI7Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2285,
  "prerequisites": [
    2278,
    2283
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Finally! A useful bee from the Boggy branch. The Elastic bee will actually produce rubber bars for you! No more smelly Sulfur! Breed them from Distilled and Resinous.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Elastic",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2278,
    2283
  ],
  "rewards": [],
  "tasks": []
}
